Clean pom.xml and add de-lombok as TODO