@@ -2,48 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.coinbasepro.exchange</groupId>
+    <groupId>com.coinbase.exchange</groupId>
     <artifactId>CoinbaseProExchange</artifactId>
     <packaging>jar</packaging>
     <name>Coinbase Pro API Wrapper Client</name>
     <version>1.0-SNAPSHOT</version>
-    <url>http://www.springframework.org/osgi</url>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>16</source>
+                    <target>16</target>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
     <properties>
+        <encoding>UTF-8</encoding>
         <slf4j.version>1.5.0</slf4j.version>
-        <spring.maven.artifact.version>2.5.6.SEC01</spring.maven.artifact.version>
-        <spring.osgi.version>1.2.1</spring.osgi.version>
-        <equinox.ver>3.2.2</equinox.ver>
     </properties>
 
     <dependencies>
@@ -58,7 +42,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.16</version>
+            <version>1.18.20</version>
             <scope>compile</scope>
         </dependency>
 
@@ -121,7 +105,5 @@
             <artifactId>aspectjrt</artifactId>
             <version>1.9.6</version>
         </dependency>
-
     </dependencies>
-
 </project>
